# GL-3

./: .gitignore  CMakeLists.txt  build.bat  run.bat
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  callbacks.h  main.c
